fix pages dark mode toggle resoposivness

--- a/static/styles/Impressions dark.css
+++ b/static/styles/Impressions dark.css
@@ -177,7 +177,7 @@ body
 
 .darkmodeimg 
 {
-  width: 20svh;
+  width: 5svh;
   height: auto;
 }
 
@@ -778,6 +778,10 @@ footer
 
 @media (max-width: 480px) 
 {
+  .darkmode-change 
+  {
+    position: static;
+  }
   .header 
   {
     height: auto;
