--- a/static/styles/about_us.css
+++ b/static/styles/about_us.css
@@ -192,7 +192,7 @@
 
 .darkmodeimg 
 {
-  width: 21svh;
+  width: 4svh;
   height: auto;
 }
 
@@ -1144,6 +1144,10 @@ footer
 
 @media (max-width: 480px) 
 {
+  .darkmode-change 
+  {
+    position: static;
+  }
   .header 
   {
     height: auto;
